objects/CookieConsent__c.object
<CustomObject>
    <fields>
        <fullName>ConsentCapturedSourceType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consent Captured Source Type</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsentCapturedSource__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consent Captured Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsentGiverId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>Individual</referenceTo>
        <relationshipLabel>Cookie Consent Records</relationshipLabel>
        <relationshipName>Cookie_Consent_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CookieConsentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cookie Consent Category</label>
        <referenceTo>CookieConsentCategory__c</referenceTo>
        <relationshipLabel>Cookie Consent Records</relationshipLabel>
        <relationshipName>Cookie_Consent_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cookie Consent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cookie Consent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cookie Consent Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>